2007-01-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/ReflectionClass.cs,
	  MonoDevelop.Projects.Parser/ReflectionMethod.cs: Include overloaded
	  operators in the reflected classes.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Text/TextFile.cs: Added method for getting the
	  encoding of a file.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Forgot to add one file.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs: In GetNeedsBuilding, use a
	  cache to temporarily store results. It avoids recursively checking
	  the same projects multiple times.
	* MonoDevelop.Projects.mdp, Makefile.am: Updated.
	* MonoDevelop.Projects.Text/TextEncoding.cs: Added code page field.
	* MonoDevelop.Projects.Text/TextFileReader.cs: New TextFileReader which
	  automatically detects the file encoding.
	* MonoDevelop.Projects.Parser/AbstractDecoration.cs,
	  MonoDevelop.Projects.Parser/ReflectionClass.cs,
	  MonoDevelop.Projects.Parser/PersistentMethod.cs,
	  MonoDevelop.Projects.Parser/PersistentProperty.cs,
	  MonoDevelop.Projects.Parser/AbstractIndexer.cs,
	  MonoDevelop.Projects.Parser/AbstractMember.cs,
	  MonoDevelop.Projects.Parser/ReflectionEvent.cs,
	  MonoDevelop.Projects.Parser/ReflectionField.cs,
	  MonoDevelop.Projects.Parser/PersistentEvent.cs,
	  MonoDevelop.Projects.Parser/PersistentField.cs,
	  MonoDevelop.Projects.Parser/AbstractEvent.cs,
	  MonoDevelop.Projects.Parser/AbstractNamedEntity.cs,
	  MonoDevelop.Projects.Parser/AbstractField.cs,
	  MonoDevelop.Projects.Parser/AbstractProperty.cs,
	  MonoDevelop.Projects.Parser/ReflectionMethod.cs,
	  MonoDevelop.Projects.Parser/ReflectionProperty.cs,
	  MonoDevelop.Projects.Parser/ReflectionIndexer.cs,
	  MonoDevelop.Projects.Parser/PersistentIndexer.cs,
	  MonoDevelop.Projects.Parser/AbstractMethod.cs: Don't store the
	  whole fully qualified name in class members, store only the name.